tests/semantic_analysis/error/no_argument.c
no_argument\.c:1:7: error: .+